fix: align last app

--- a/css/apps-launcher.css
+++ b/css/apps-launcher.css
@@ -24,6 +24,7 @@ ul.apps-list li {
     width: 31%;
     display: inline-block;
     padding: 0.2em;
+    float: left;
 }
 .card {
     width: 100px;
